
 Doc Fixes
 - Clarified dist_abstract search procedure in API.pod (RT#41056) [Mario
   Domgoergen]

 Bug Fixes
 - Workaround HARNESS_TIMER env issue in t/compat.t (RT#39635)
 - Fix ~ expansion when $HOME is different from /etc/passwd as
   when running sudo.  [rt.cpan.org 39662]
 - Fixed a small POD error in the Cookbook. [Damyan Ivanov]

 Enhancements
 - We now support a 'create_license' parameter to new() that will
   create a LICENSE file during the 'dist' phase with the full text of
   the license.  This requires Software::License on the author's
   machine.  THIS ALSO STILL NEEDS DOCS.
 - Added lgpl2/lgpl3 entries to the supported licenses (RT#40532).

 Test Fixes
 - Defend against more stray environment variables interfering
   with the tests.

 Other
 - Updated our embedded version.pm to 0.76, enhanced documentation on
   dist_version_from.  [John Peacock]

0.30 - Thu Sep 25 20:57:36 2008

 - First non-beta release since April 2007.  In the meantime, Sarkozy
   became president of France, the 35W bridge fell in Minneapolis,
   Phelps won a lot of gold, a new tribe of indigenous people was
   discovered in the Amazon, and Bob Barker stopped doing The Price Is
   Right.  As of this moment though, the U.S. economy still hasn't
   collapsed completely.

0.2808_05 - Thu Sep 18 23:30:39 PDT 2008

 - Skip test in t/ext.t which tickles shellwords() in Text::ParseWords
   below 3.23 [David Wheeler, Ken]

 - Fixed some shell-quoting issues in do_system() on Windows [Ken,
   Schwern, reported by Curtis Jewell]

 - Fixed t/xs.t failure for missing 'const char *' typemap in 5.6
   [Schwern]

 - Added build_requires for Test::More 0.49 and Test::Harness 2.03.
   Removed bundled Test::More (was not working for 5.005x anyway).
   [Schwern]

 - Minimum required perl version is now 5.6.1. [Schwern]

0.2808_04 - Thu Sep 11 22:51:27 PDT 2008

 - Backed-out incompatible Module::Build::ModuleInfo change (first in
   0.2808_02.)

0.2808_03 - Mon Sep  1 14:43:27 PDT 2008
