@@ -3788,7 +3788,12 @@ sub make_tarball {
     # hack so that the resulting archive is compatible with older clients.
     $Archive::Tar::DO_NOT_USE_PREFIX = 0;
     my $files = $self->rscan_dir($dir);
-    Archive::Tar->create_archive("$file.tar.gz", 1, @$files);
+    my $tar = Archive::Tar->new;
+    $tar->add_files( @$files );
+    for my $f ( $tar->get_files ) {
+      $f->mode( $f->mode & ~022 ); # chmod go-w
+    }
+    $tar->write( "$file.tar.gz", 1 );
   }
 }
 
